--- a/art/index.html
+++ b/art/index.html
@@ -151,37 +151,65 @@
           this.classList.remove("zoom");
         });
       }
-     var galleryRows = document.getElementsByClassName("gallery-row");
-for (var i = 0; i < galleryRows.length; i++) {
-  var galleryRow = galleryRows[i];
-  var scrollBtnLeft = galleryRow.querySelector(".scroll-btn.left");
-  var scrollBtnRight = galleryRow.querySelector(".scroll-btn.right");
-  var scrollDistance = 200;
+ // 獲取所有滾動按鈕
+var scrollButtons = document.querySelectorAll(".scroll-btn");
 
-  scrollBtnLeft.addEventListener("click", function() {
-    galleryRow.scrollLeft -= scrollDistance;
-    updateScrollButtons();
-  });
+// 綁定每個按鈕的點擊事件
+scrollButtons.forEach(function(button) {
+button.addEventListener("click", function() {
+// 獲取該按鈕所在的行
+var row = this.parentNode;
+  // 獲取行內的所有圖片
+var images = row.querySelectorAll("img");
 
-  scrollBtnRight.addEventListener("click", function() {
-    galleryRow.scrollLeft += scrollDistance;
-    updateScrollButtons();
-  });
+// 獲取每個圖片的寬度和 margin-right 值
+var imageWidth = images[0].offsetWidth + parseInt(getComputedStyle(images[0]).marginRight);
 
-  function updateScrollButtons() {
-    if (galleryRow.scrollLeft === 0) {
-      scrollBtnLeft.classList.add("disabled");
-    } else {
-      scrollBtnLeft.classList.remove("disabled");
-    }
+// 獲取當前滾動條的位置
+var scrollPosition = row.scrollLeft;
 
-    if (galleryRow.scrollLeft + galleryRow.clientWidth === galleryRow.scrollWidth) {
-      scrollBtnRight.classList.add("disabled");
-    } else {
-      scrollBtnRight.classList.remove("disabled");
-    }
-  }
+// 計算每次滾動的距離（一次滾動一張圖片的距離）
+var scrollDistance = imageWidth;
+
+// 根據按鈕的不同類型計算出不同的滾動方向和距離
+if (this.classList.contains("left")) {
+  // 向左滾動
+  scrollDistance = -scrollDistance;
+} else {
+  // 向右滾動
+  scrollDistance = scrollDistance;
 }
+
+// 計算滾動後的位置
+var newScrollPosition = scrollPosition + scrollDistance;
+
+// 如果已經滾動到了最左邊或最右邊，則禁用相應的按鈕
+var scrollLeft = 0;
+var scrollRight = row.scrollWidth - row.clientWidth;
+if (newScrollPosition <= scrollLeft) {
+  row.scrollTo({
+    left: scrollLeft,
+    behavior: "smooth"
+  });
+  this.classList.add("disabled");
+} else if (newScrollPosition >= scrollRight) {
+  row.scrollTo({
+    left: scrollRight,
+    behavior: "smooth"
+  });
+  this.classList.add("disabled");
+} else {
+  row.scrollTo({
+    left: newScrollPosition,
+    behavior: "smooth"
+  });
+  // 否則啟用所有按鈕
+  scrollButtons.forEach(function(button) {
+    button.classList.remove("disabled");
+  });
+}
+});
+});
     </script>
   </body>
 </html>
