--- a/art/index.html
+++ b/art/index.html
@@ -151,69 +151,74 @@
           this.classList.remove("zoom");
         });
       }
- // 獲取所有滾動按鈕
+// 獲取所有滾動按鈕
 var scrollButtons = document.querySelectorAll(".scroll-btn");
 
 // 綁定每個按鈕的點擊事件
 scrollButtons.forEach(function(button) {
-button.addEventListener("click", function(event) {
-// 判断点击的元素是否是图片
-if (event.target.nodeName.toLowerCase() === 'img') {
-return; // 如果是图片则不进行任何操作
-}
+  button.addEventListener("click", function(event) {
+    // 禁止默認事件，防止滾動到頁面頂部或底部
+    event.preventDefault();
 
-// 獲取該按鈕所在的行
-var row = this.parentNode;
-// 獲取行內的所有圖片
-var images = row.querySelectorAll("img");
+    // 獲取該按鈕所在的行
+    var row = this.parentNode;
 
-// 獲取每個圖片的寬度和 margin-right 值
-var imageWidth = images[0].offsetWidth + parseInt(getComputedStyle(images[0]).marginRight);
+    // 獲取行內的所有圖片
+    var images = row.querySelectorAll("img");
 
-// 獲取當前滾動條的位置
-var scrollPosition = row.scrollLeft;
+    // 獲取每個圖片的寬度和 margin-right 值
+    var imageWidth = images[0].offsetWidth + parseInt(getComputedStyle(images[0]).marginRight);
 
-// 計算每次滾動的距離（一次滾動一張圖片的距離）
-var scrollDistance = imageWidth;
+    // 獲取當前滾動條的位置
+    var scrollPosition = row.scrollLeft;
 
-// 根據按鈕的不同類型計算出不同的滾動方向和距離
-if (this.classList.contains("left")) {
-// 向左滾動
-scrollDistance = -scrollDistance;
-} else {
-// 向右滾動
-scrollDistance = scrollDistance;
-}
+    // 計算每次滾動的距離（一次滾動一張圖片的距離）
+    var scrollDistance = imageWidth;
 
-// 計算滾動後的位置
-var newScrollPosition = scrollPosition + scrollDistance;
+    // 根據按鈕的不同類型計算出不同的滾動方向和距離
+    if (this.classList.contains("left")) {
+      // 向左滾動
+      scrollDistance = -scrollDistance;
+    } else {
+      // 向右滾動
+      scrollDistance = scrollDistance;
+    }
 
-// 如果已經滾動到了最左邊或最右邊，則禁用相應的按鈕
-var scrollLeft = 0;
-var scrollRight = row.scrollWidth - row.clientWidth;
-if (newScrollPosition <= scrollLeft) {
-row.scrollTo({
-left: scrollLeft,
-behavior: "smooth"
-});
-this.classList.add("disabled");
-} else if (newScrollPosition >= scrollRight) {
-row.scrollTo({
-left: scrollRight,
-behavior: "smooth"
-});
-this.classList.add("disabled");
-} else {
-row.scrollTo({
-left: newScrollPosition,
-behavior: "smooth"
-});
-// 否則啟用所有按鈕
-scrollButtons.forEach(function(button) {
-button.classList.remove("disabled");
-});
-}
-});
+    // 計算滾動後的位置
+    var newScrollPosition = scrollPosition + scrollDistance;
+
+    // 如果已經滾動到了最左邊或最右邊，則禁用相應的按鈕
+    var scrollLeft = 0;
+    var scrollRight = row.scrollWidth - row.clientWidth;
+    if (newScrollPosition <= scrollLeft) {
+      row.scrollTo({
+        left: scrollLeft,
+        behavior: "smooth"
+      });
+      this.classList.add("disabled");
+    } else if (newScrollPosition >= scrollRight) {
+      row.scrollTo({
+        left: scrollRight,
+        behavior: "smooth"
+      });
+      this.classList.add("disabled");
+    } else {
+      // 否則滾動到新位置
+      row.scrollTo({
+        left: newScrollPosition,
+        behavior: "smooth"
+      });
+      // 禁用當前按鈕
+      this.classList.add("disabled");
+      // 啟用其他按鈕
+      var siblingButtons = Array.from(this.parentNode.children).filter(function(child) {
+        return child !== button;
+      });
+      siblingButtons.forEach(function(siblingButton) {
+        siblingButton.classList.remove("disabled");
+      });
+    }
+  });
 });
     </script>
   </body>
