--- a/art/index.html
+++ b/art/index.html
@@ -63,7 +63,7 @@ h1 {
 
   /* 移到 body 下面，並固定在頁面上 */
   .scroll-btn {
-    position: fixed;
+    position: absolute;
     top: 50%;
     transform: translateY(-50%);
     width: 50px;
