--- a/art/index.html
+++ b/art/index.html
@@ -111,6 +111,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+  position: relative;
 }
     </style>
   </head>
@@ -119,46 +120,34 @@
     <p>這是一個 Midjourney 創作的藝術空間。</p>
     <div class="gallery">
   <div class="gallery-wrapper">
+    <div class="scroll-btn-container">
+      <button class="scroll-btn left"></button>
+      <button class="scroll-btn right"></button>
+    </div>
     <div class="gallery-row">
-      <div class="scroll-btn-container">
-        <button class="scroll-btn left"></button>
-        <button class="scroll-btn right"></button>
-      </div>
       <img src="images/CAT.jpg">
       <img src="images/CAT-2.jpg">
       <img src="images/CAT-3.jpg">
-      <div class="scroll-btn-container">
-        <button class="scroll-btn left"></button>
-        <button class="scroll-btn right"></button>
-      </div>
+    </div>
+    <div class="scroll-btn-container">
+      <button class="scroll-btn left"></button>
+      <button class="scroll-btn right"></button>
     </div>
     <div class="gallery-row">
-      <div class="scroll-btn-container">
-        <button class="scroll-btn left"></button>
-        <button class="scroll-btn right"></button>
-      </div>
       <img src="images/GIRL.jpg">
       <img src="images/GIRL-2.jpg">
       <img src="images/GIRL-4.jpg">
       <img src="images/GIRL-4.jpg">
-      <div class="scroll-btn-container">
-        <button class="scroll-btn left"></button>
-        <button class="scroll-btn right"></button>
-      </div>
+    </div>
+    <div class="scroll-btn-container">
+      <button class="scroll-btn left"></button>
+      <button class="scroll-btn right"></button>
     </div>
     <div class="gallery-row">
-      <div class="scroll-btn-container">
-        <button class="scroll-btn left"></button>
-        <button class="scroll-btn right"></button>
-      </div>
       <img src="images/GIRL-3.jpg">
       <img src="images/GIRL-5.jpg">
       <img src="images/GIRL-6.jpg">
       <img src="images/GIRL-4.jpg">
-      <div class="scroll-btn-container">
-        <button class="scroll-btn left"></button>
-        <button class="scroll-btn right"></button>
-      </div>
     </div>
   </div>
 </div>
