--- a/art/index.html
+++ b/art/index.html
@@ -113,6 +113,13 @@
   padding: 0 20px;
   position: relative;
 }
+      .scroll-btn-container.left {
+  left: 0;
+}
+
+.scroll-btn-container.right {
+  right: 0;
+}
     </style>
   </head>
   <body>
