--- a/art/index.html
+++ b/art/index.html
@@ -23,104 +23,95 @@
       }
       
       .gallery-wrapper {
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
+        width: 100%;
+        max-width: 800px;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        scrollbar-width: none;
+        position: relative; /* 新增 */
+      }
+      .scroll-btn {
+        position: absolute; /* 新增 */
+        top: 50%; /* 新增 */
+        transform: translateY(-50%); /* 新增 */
+        width: 50px;
+        height: 50px;
+        background-color: rgba(0,0,0,0.3);
+        border: none;
+        outline: none;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+        z-index: 1;
+      }
+
+      .scroll-btn:hover {
+        background-color: rgba(0,0,0,0.5);
+      }
+
+      .scroll-btn.left {
+        left: 0;
+        background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronLeftCircle-512.png");
+        background-size: cover;
+      }
+
+      .scroll-btn.right {
+        right: 0;
+        background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronRightCircle-512.png");
+        background-size: cover;
+      }
+
+      .scroll-btn.disabled {
+        opacity: 0.3;
+        cursor: pointer;
+        pointer-events: auto;
+      }
+
+      /* 修改 img 的 margin-left 和 margin-right */
+      .gallery-row img {
+        width: calc(33.33% - 10px);
+        border: 1px solid #ccc;
+        transition: all 0.3s ease-in-out;
+        margin-left: 5px;
+        margin-right: 5px;
+        margin-bottom: 20px;
+      }
+
+      .gallery-row {
+        display: flex;
+        justify-content: flex-start;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        margin-bottom: 20px;
+        width: 100%;
+        padding-right: 20px;
+        box-sizing: border-box;
+      }
+
+      .gallery-row:first-of-type {
+        margin-bottom: 0;
+      }
+
+      .gallery-row img {
+        width: calc(33.33% - 10px);
+        border: 1px solid #ccc;
+        transition: all 0.3s ease-in-out;
+        margin-right: 20px;
+        margin-bottom: 20px;
+      }
+
+      .zoom {
+        transform: scale(1.5);
+      }
+      ::-webkit-scrollbar {
+        width: 0;
+      }
+        .scroll-btn-container {
   display: flex;
-  flex-wrap: wrap;
-  scrollbar-width: none;
-  position: relative;
-}
-
-.scroll-btn {
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 50px;
-  height: 50px;
-  background-color: rgba(0,0,0,0.3);
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  z-index: 1;
-}
-
-.scroll-btn:hover {
-  background-color: rgba(0,0,0,0.5);
-}
-
-.scroll-btn.left {
-  left: 0;
-  background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronLeftCircle-512.png");
-  background-size: cover;
-}
-
-.scroll-btn.right {
-  right: 0;
-  background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronRightCircle-512.png");
-  background-size: cover;
-}
-
-.scroll-btn.disabled {
-  opacity: 0.3;
-  cursor: pointer;
-  pointer-events: auto;
-}
-
-.gallery-row img {
-  width: calc(33.33% - 10px);
-  border: 1px solid #ccc;
-  transition: all 0.3s ease-in-out;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 20px;
-}
-
-.gallery-row {
-  display: flex;
-  justify-content: flex-start;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  margin-bottom: 20px;
-  width: 100%;
-  padding-right: 20px;
-  box-sizing: border-box;
-  position: relative; /* 新增 */
-}
-
-.gallery-row:first-of-type {
-  margin-bottom: 0;
-}
-
-.gallery-row img {
-  width: calc(33.33% - 10px);
-  border: 1px solid #ccc;
-  transition: all 0.3s ease-in-out;
-  margin-right: 20px;
-  margin-bottom: 20px;
-}
-
-.zoom {
-  transform: scale(1.5);
-}
-
-::-webkit-scrollbar {
-  width: 0;
-}
-
-.scroll-btn-container {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.scroll-btn-container.left {
-  left: 0;
-}
-
-.scroll-btn-container.right {
-  right: 0;
 }
     </style>
   </head>
