--- a/art/index.html
+++ b/art/index.html
@@ -110,7 +110,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 100px;
+  position: relative;
 }
     </style>
   </head>
