--- a/art/index.html
+++ b/art/index.html
@@ -113,6 +113,9 @@
   padding: 0 400px;
   position: relative;
 }
+      .scroll-btn-container.top {
+  left: 50px;
+}
     </style>
   </head>
   <body>
