--- a/art/index.html
+++ b/art/index.html
@@ -106,18 +106,11 @@
       ::-webkit-scrollbar {
         width: 0;
       }
-        ..scroll-btn-container {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.scroll-btn-container.left {
-  left: 0;
-}
-
-.scroll-btn-container.right {
-  right: 0;
+        .scroll-btn-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
 }
     </style>
   </head>
