--- a/art/index.html
+++ b/art/index.html
@@ -151,7 +151,7 @@
   </div>
 </div>
     <script>
-        var scrollButtons = document.querySelectorAll(".scroll-btn");
+        var scrollButtons = document.getElementsByClassName("scroll-btn");
 scrollButtons.forEach(function(button) {
   button.addEventListener("click", function() {
     var container = this.parentNode;
