--- a/art/index.html
+++ b/art/index.html
@@ -169,7 +169,7 @@ scrollButtons.forEach(function(button) {
         });
       }
  // 獲取所有滾動按鈕
-var scrollButtons = document.querySelectorAll(".scroll-btn");
+var scrollButtons = document.getElementsByClassName("scroll-btn");
 
 // 綁定每個按鈕的點擊事件
 scrollButtons.forEach(function(button) {
