--- a/art/index.html
+++ b/art/index.html
@@ -116,7 +116,7 @@
   </head>
   <body>
     <h1>Cats & Ladies</h1>
-    <p>這是一個 Midjourney 創作的藝術空間。</p>
+    <p><Midjourney 創作品集></p>
     <div class="gallery">
   <div class="gallery-wrapper">
     <div class="scroll-btn-container">
