--- a/art/index.html
+++ b/art/index.html
@@ -116,7 +116,7 @@
   </head>
   <body>
     <h1>Cats & Ladies</h1>
-    <p><Midjourney 創作品集></p>
+    <p>Midjourney 創作品集 </p>
     <div class="gallery">
   <div class="gallery-wrapper">
     <div class="scroll-btn-container">
