--- a/art/index.html
+++ b/art/index.html
@@ -112,7 +112,7 @@
         align-items: center;
         padding: 0 20px;
       }
-    </style
+    </style>
 </head>
   <body>
     <h1>Cats & Ladies</h1>
