--- a/art/index.html
+++ b/art/index.html
@@ -66,8 +66,7 @@
 
 .gallery-row .scroll-btn.disabled {
   opacity: 0.3;
-  cursor: pointer;
-  pointer-events: auto;
+  cursor: not-allowed;
 }
 
 /* 修改 img 的 margin-left 和 margin-right */
@@ -117,14 +116,12 @@
     <div class="gallery">
       <div class="gallery-wrapper">
         <div class="gallery-row">
-          <button class="scroll-btn left"></button>
           <img src="images/CAT.jpg">
           <img src="images/CAT-2.jpg">
           <img src="images/CAT-3.jpg">
           <button class="scroll-btn right"></button>
         </div>
         <div class="gallery-row">
-          <button class="scroll-btn left"></button>
           <img src="images/GIRL.jpg">
           <img src="images/GIRL-2.jpg">
           <img src="images/GIRL-4.jpg">
@@ -132,7 +129,6 @@
           <button class="scroll-btn right"></button>
         </div>
         <div class="gallery-row">
-          <button class="scroll-btn left"></button>
           <img src="images/GIRL-3.jpg">
           <img src="images/GIRL-5.jpg">
           <img src="images/GIRL-6.jpg">
@@ -151,65 +147,6 @@
           this.classList.remove("zoom");
         });
       }
- // 獲取所有滾動按鈕
-var scrollButtons = document.querySelectorAll(".scroll-btn");
-
-// 綁定每個按鈕的點擊事件
-scrollButtons.forEach(function(button) {
-button.addEventListener("click", function() {
-// 獲取該按鈕所在的行
-var row = this.parentNode;
-  // 獲取行內的所有圖片
-var images = row.querySelectorAll("img");
-
-// 獲取每個圖片的寬度和 margin-right 值
-var imageWidth = images[0].offsetWidth + parseInt(getComputedStyle(images[0]).marginRight);
-
-// 獲取當前滾動條的位置
-var scrollPosition = row.scrollLeft;
-
-// 計算每次滾動的距離（一次滾動一張圖片的距離）
-var scrollDistance = imageWidth;
-
-// 根據按鈕的不同類型計算出不同的滾動方向和距離
-if (this.classList.contains("left")) {
-  // 向左滾動
-  scrollDistance = -scrollDistance;
-} else {
-  // 向右滾動
-  scrollDistance = scrollDistance;
-}
-
-// 計算滾動後的位置
-var newScrollPosition = scrollPosition + scrollDistance;
-
-// 如果已經滾動到了最左邊或最右邊，則禁用相應的按鈕
-var scrollLeft = 0;
-var scrollRight = row.scrollWidth - row.clientWidth;
-if (newScrollPosition <= scrollLeft) {
-  row.scrollTo({
-    left: scrollLeft,
-    behavior: "smooth"
-  });
-  this.classList.add("disabled");
-} else if (newScrollPosition >= scrollRight) {
-  row.scrollTo({
-    left: scrollRight,
-    behavior: "smooth"
-  });
-  this.classList.add("disabled");
-} else {
-  row.scrollTo({
-    left: newScrollPosition,
-    behavior: "smooth"
-  });
-  // 否則啟用所有按鈕
-  scrollButtons.forEach(function(button) {
-    button.classList.remove("disabled");
-  });
-}
-});
-});
     </script>
   </body>
 </html>
