--- a/art/index.html
+++ b/art/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
     <meta charset="UTF-8">
     <title>Cats & Ladies</title>
     <style>
@@ -91,6 +91,36 @@
       ::-webkit-scrollbar {
         width: 0;
       }
+
+      /* Slideshow styles */
+      .slideshow {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 300px;
+        height: 100%;
+        overflow: hidden;
+      }
+
+      .slideshow-images {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
+
+      .slideshow-images img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+      }
+
+      .slideshow-images img.active {
+        opacity: 1;
+      }
     </style>
   </head>
   <body>
@@ -117,6 +147,9 @@
         </div>
       </div>
     </div>
+  <div class="slideshow">
+    <div class="slideshow-images"></div>
+  </div>      
     <script>
       var images = document.getElementsByTagName("img");
       for (var i = 0; i < images.length; i++) {
@@ -182,6 +215,24 @@ galleryRows.forEach(function (row) {
   row.parentElement.appendChild(leftButton);
   row.parentElement.appendChild(rightButton);
 });
+    var imageUrls = [  "images/CAT.jpg",  "images/CAT-2.jpg",  "images/CAT-3.jpg",  "images/GIRL.jpg",  "images/GIRL-2.jpg",  "images/GIRL-4.jpg",  "images/GIRL-4.jpg",  "images/GIRL-3.jpg",  "images/GIRL-5.jpg",  "images/GIRL-6.jpg",  "images/GIRL-4.jpg"];
+        var slideshowImages = document.querySelector('.slideshow-images');
+imageUrls.forEach(function (url) {
+  var img = document.createElement('img');
+  img.src = url;
+  slideshowImages.appendChild(img);
+});
+var currentIndex = 0;
+
+function showNextImage() {
+  var images = document.querySelectorAll('.slideshow-images img');
+  var nextIndex = (currentIndex + 1) % images.length;
+  images[currentIndex].classList.remove('active');
+  images[nextIndex].classList.add('active');
+  currentIndex = nextIndex;
+}
+
+setInterval(showNextImage, 2000);
     </script>
   </body>
 </html>
