--- a/art/index.html
+++ b/art/index.html
@@ -93,33 +93,30 @@
       }
 
       /* Slideshow styles */
-      .slideshow {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 300px;
-        height: 100%;
-        overflow: hidden;
-      }
+.slideshow {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 300px;
+  overflow: hidden;
+}
 
-      .slideshow-images {
-        position: relative;
-        width: 100%;
-        height: 100%;
-      }
+.slideshow-images {
+  position: relative;
+  width: 100%;
+}
 
-      .slideshow-images img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        transition: opacity 1s ease-in-out;
-      }
+.slideshow-images img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
 
-      .slideshow-images img.active {
-        opacity: 1;
+.slideshow-images img.active {
+  opacity: 1;
       }
     </style>
   </head>
