--- a/art/index.html
+++ b/art/index.html
@@ -98,7 +98,7 @@
         top: 0;
         right: 0;
         width: 300px;
-        height: 100%;
+        height: 300px;
         overflow: hidden;
       }
 
