--- a/art/index.html
+++ b/art/index.html
@@ -94,13 +94,13 @@
 
       /* Slideshow styles */
       .slideshow {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 300px;
-        height: 300px;
-        overflow: hidden;
-      }
+  position: fixed;
+  top: 0;
+  right: calc(33.33% + 45px); /* adjust the value of 45px to set the gap */
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+}
 
       .slideshow-images {
         position: relative;
