--- a/art/index.html
+++ b/art/index.html
@@ -93,14 +93,19 @@
       }
 
       /* Slideshow styles */
-      .slideshow {
-  position: fixed;
-  top: 0;
-  right: calc(33.33% + 45px); /* adjust the value of 45px to set the gap */
+      .gallery-row:nth-of-type(2) {
+  position: relative;
+}
+
+.slideshow {
+  position: absolute;
+  top: calc(100% + 50px);
+  right: -300px;
   width: 300px;
   height: 300px;
   overflow: hidden;
 }
+
 
       .slideshow-images {
         position: relative;
@@ -139,11 +144,15 @@
           <img src="images/GIRL-4.jpg">
           <img src="images/GIRL-4.jpg">
         </div>
-        <div class="gallery-row">
-          <img src="images/GIRL-3.jpg">
-          <img src="images/GIRL-5.jpg">
-          <img src="images/GIRL-6.jpg">
-          <img src="images/GIRL-4.jpg">
+       <div class="gallery-row">
+  <div class="image-container">
+    <img src="images/GIRL-3.jpg">
+    <img src="images/GIRL-5.jpg">
+    <img src="images/GIRL-6.jpg">
+    <img src="images/GIRL-4.jpg">
+  </div>
+  <div class="slideshow">
+    <div class="slideshow-images"></div>
         </div>
       </div>
     </div>
