--- a/art/index.html
+++ b/art/index.html
@@ -98,7 +98,7 @@
         top: 0;
         right: 0;
         width: 300px;
-        height: 100%;
+        height: 300px;
         overflow: hidden;
       }
 
@@ -115,7 +115,7 @@
         width: 100%;
         height: 100%;
         opacity: 0;
-        transition: opacity 1s ease-in-out;
+        transition: opacity 3s ease-in-out;
       }
 
       .slideshow-images img.active {
