--- a/art/index.html
+++ b/art/index.html
@@ -91,16 +91,18 @@
       ::-webkit-scrollbar {
         width: 0;
       }
-
+      .gallery-row:nth-of-type(2) {
+  position: relative;
+}
       /* Slideshow styles */
       .slideshow {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 300px;
-        height: 300px;
-        overflow: hidden;
-      }
+  position: absolute;
+  top: calc(100% + 50px);
+  right: -300px;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+}
 
       .slideshow-images {
         position: relative;
@@ -134,6 +136,7 @@
           <img src="images/CAT-3.jpg">
         </div>
         <div class="gallery-row">
+          <div class="image-container">
           <img src="images/GIRL.jpg">
           <img src="images/GIRL-2.jpg">
           <img src="images/GIRL-4.jpg">
