--- a/art/index.html
+++ b/art/index.html
@@ -97,8 +97,8 @@
       /* Slideshow styles */
       .slideshow {
   position: absolute;
-  top: calc(100% + 50px);
-  right: -300px;
+  top: 50%;
+  right: 0;
   width: 300px;
   height: 300px;
   overflow: hidden;
@@ -136,7 +136,6 @@
           <img src="images/CAT-3.jpg">
         </div>
         <div class="gallery-row">
-          <div class="image-container">
           <img src="images/GIRL.jpg">
           <img src="images/GIRL-2.jpg">
           <img src="images/GIRL-4.jpg">
