--- a/art/index.html
+++ b/art/index.html
@@ -97,8 +97,8 @@
       /* Slideshow styles */
       .slideshow {
   position: absolute;
-  top: 50%;
-  right: 0;
+  top: 50%+50px;
+  right: 100px;
   width: 300px;
   height: 300px;
   overflow: hidden;
@@ -106,8 +106,8 @@
 
       .slideshow-images {
         position: relative;
-        width: 100%;
-        height: 100%;
+        width: 300px;
+        height: 300px;
       }
 
       .slideshow-images img {
