--- a/art/index.html
+++ b/art/index.html
@@ -97,7 +97,7 @@
       /* Slideshow styles */
       .slideshow {
   position: absolute;
-  top: 50%+50px;
+  top: calc(50% + 50px);
   right: 100px;
   width: 300px;
   height: 300px;
