--- a/art/index.html
+++ b/art/index.html
@@ -114,8 +114,8 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 300px;
+        height: 300px%;
         opacity: 0;
         transition: opacity 3s ease-in-out;
       }
