--- a/art/index.html
+++ b/art/index.html
@@ -115,7 +115,7 @@
         top: 0;
         left: 0;
         width: 300px;
-        height: 300px%;
+        height: 300px;
         opacity: 0;
         transition: opacity 3s ease-in-out;
       }
