--- a/art/index.html
+++ b/art/index.html
@@ -99,8 +99,8 @@
   position: absolute;
   top: calc(50% + 30px);
   right: 50px;
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   overflow: hidden;
 }
 
@@ -114,10 +114,10 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 300px;
-        height: 300px;
+        width: 100%;
+        height: 100%;
         opacity: 0;
-        transition: opacity 3s ease-in-out;
+        transition: opacity 5s ease-in-out;
       }
 
       .slideshow-images img.active {
