--- a/art/index.html
+++ b/art/index.html
@@ -98,7 +98,7 @@
       .slideshow {
   position: absolute;
   top: calc(50% + 40px);
-  right: 50px;
+  right: calc(0% + 50px);
   width: 280px;
   height: 280px;
   overflow: hidden;
