--- a/art/index.html
+++ b/art/index.html
@@ -105,7 +105,7 @@
 }
 
       .slideshow-images {
-        position: relative;
+        position: absolute;
         width: 300px;
         height: 300px;
       }
