--- a/art/index.html
+++ b/art/index.html
@@ -96,7 +96,7 @@
 }
       /* Slideshow styles */
       .slideshow {
-  position: relative;
+  position: absolute;
   top: calc(50% + 45px);
   right: calc(0% + 50px);
   width: 280px;
