--- a/art/index.html
+++ b/art/index.html
@@ -13,10 +13,10 @@
         font-size: 20px;
         color: #FFA500;
       }
-      
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
       h1 {
         text-align: center;
-        font-family: Georgia, serif;
+        font-family: 'Pacifico', Georgia, serif;
         font-size: 36px;
         font-weight: bold;
         color: lightyellow;
