--- a/art/index.html
+++ b/art/index.html
@@ -13,14 +13,20 @@
         font-size: 20px;
         color: #FFA500;
       }
-      h1 {
-        text-align: center;
-        font-family: Georgia, serif;
-        font-size: 36px;
-        font-weight: bold;
-        color: lightyellow;
-      }
-      
+@font-face {
+  font-family: 'Pacifico';
+  src: url('Pacifico.woff') format('woff'),
+       url('Pacifico.ttf') format('truetype');
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Pacifico', Georgia, serif;
+  font-size: 36px;
+  font-weight: bold;
+  color: lightyellow;
+}
+
       .gallery-wrapper {
         width: 100%;
         max-width: 800px;
