--- a/art/index.html
+++ b/art/index.html
@@ -3,6 +3,8 @@
     <head>
     <meta charset="UTF-8">
     <title>Cats & Ladies</title>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Pacifico">
     <style>
       /* 設定網頁背景圖片 */
       body {
@@ -13,12 +15,6 @@
         font-size: 20px;
         color: #FFA500;
       }
-@font-face {
-  font-family: 'Pacifico';
-  src: url('Pacifico.woff') format('woff'),
-       url('Pacifico.ttf') format('truetype');
-}
-
 h1 {
   text-align: center;
   font-family: 'Pacifico', Georgia, serif;
