--- a/art/index.html
+++ b/art/index.html
@@ -17,7 +17,7 @@
       }
 h1 {
   text-align: center;
-  font-family: 'Pacifico', Georgia, serif;
+  font-family: 'Pacifico', serif;
   font-size: 36px;
   font-weight: bold;
   color: lightyellow;
