--- a/art/index.html
+++ b/art/index.html
@@ -85,10 +85,14 @@ h1 {
         left: 0;
       }
 
-      .zoom {
+           .zoom {
         transform: scale(1.5);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 100;
       }
-
       ::-webkit-scrollbar {
         width: 0;
       }
