--- a/art/index.html
+++ b/art/index.html
@@ -86,16 +86,8 @@ h1 {
       }
 
            .zoom {
-			position: fixed;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			margin: auto;
-			max-width: 100%;
-			max-height: 100%;
-			z-index: 9999;
-		}
+        transform: scale(1.3);
+      }
       ::-webkit-scrollbar {
         width: 0;
       }
@@ -191,6 +183,5 @@ galleryRows.forEach(function (row) {
   row.parentElement.appendChild(rightButton);
 });
     </script>
- <img src="https://picsum.photos/id/10/500/300" onclick="this.classList.add('zoom')">
   </body>
 </html>
