--- a/art/index.html
+++ b/art/index.html
@@ -37,7 +37,8 @@ h1 {
         justify-content: flex-start;
         overflow-x: scroll;
         overflow-y: hidden;
-        margin-bottom: 20px;
+        margin-bottom: 50px;
+        margin-top: 50px;
         width: 100%;
         padding-right: 20px;
         box-sizing: border-box;
