--- a/art/index.html
+++ b/art/index.html
@@ -53,7 +53,8 @@ h1 {
         transition: all 0.3s ease-in-out;
         margin-left: 5px;
         margin-right: 5px;
-        margin-bottom: 20px;
+        margin-: 30px;
+        margin-bottom: 30px;
       }
 
       .gallery-row:last-of-type {
