--- a/art/index.html
+++ b/art/index.html
@@ -53,7 +53,7 @@ h1 {
         transition: all 0.3s ease-in-out;
         margin-left: 5px;
         margin-right: 5px;
-        margin-: 30px;
+        margin-top: 30px;
         margin-bottom: 30px;
       }
 
