--- a/art/index.html
+++ b/art/index.html
@@ -59,6 +59,7 @@ h1 {
 
       .gallery-row:last-of-type {
         margin-bottom: 0;
+        margin-top: 0;
       }
 
       /* Add disabled styles for the scroll buttons */
