--- a/art/index.html
+++ b/art/index.html
@@ -109,6 +109,7 @@ h1 {
           <img src="images/GIRL-9.jpg">
           <img src="images/GIRL-10.jpg">
         </div>
+        <div class="scroll-buttons">
   <button class="scroll-button left">&#9664;</button>
   <button class="scroll-button right">&#9654;</button>
   </div>
@@ -122,6 +123,7 @@ h1 {
           <img src="images/GIRL-6.jpg">
           <img src="images/GIRL-7.jpg">
         </div>
+       <div class="scroll-buttons">
       <button class="scroll-button left">&#9664;</button>
   <button class="scroll-button right">&#9654;</button>
        </div>
@@ -137,8 +139,8 @@ h1 {
           this.classList.remove("zoom");
         });
       }
-     var galleryRows = document.querySelectorAll('.gallery-row');
-galleryRows.forEach(function (row) {
+     var galleryRowContainers = document.querySelectorAll('.gallery-row-container');
+galleryRowContainers.forEach(function (row) {
   var scrollLeft = row.scrollLeft;
   var scrollWidth = row.scrollWidth;
 
